# DeviceAccess

./: .clang-format  .clang-tidy  .clang-tidy.orig  .gitignore  .jenkinsfile  CMakeLists.txt  HowTo.project-template  HowTo_project-template.md  README.md  This_project_uses_the_project-template.txt  commit.message  expand_wildcards.22
device_backends/: CMakeLists.txt
device_backends/Subdevice/: CMakeLists.txt
device_backends/include/: AccessorInstanceDescriptor.h  AddressBasedBackend.h  AddressBasedBufferingRegisterAccessor.h  AddressBasedMuxedDataAccessor.h  AddressBasedRegisterAccessor.h  AsyncAccessorManager.h  AsyncDomain.h  AsyncDomainImpl.h  AsyncDomainsContainer.h  AsyncDomainsContainerBase.h  AsyncNDRegisterAccessor.h  Axi4_Intc.h  BackendBufferingRegisterAccessor.h  BackendFactory.h  BackendRegisterCatalogue.h  BackendRegisterInfoBase.h  CopyRegisterDecorator.h  DMapFileDefaults.h  DeviceBackend.h  DeviceBackendException.h  DeviceBackendImpl.h  DummyBackend.h  DummyBackendBase.h  DummyIntc.h  DummyInterruptControllerHandler.h  DummyInterruptTriggerAccessor.h  DummyRegisterAccessor.h  ExceptionDevice.h  ExceptionDummyBackend.h  FixedPointConverter.h  GenericInterruptControllerHandler.h  IEEE754_SingleConverter.h  InterruptControllerHandler.h  LNMBackendBufferingChannelAccessor.h  LNMBackendBufferingConstantAccessor.h  LNMBackendBufferingRegisterAccessor.h  LNMBackendBufferingVariableAccessor.h  LNMBackendChannelAccessor.h  LNMBackendRegisterAccessor.h  LNMBackendRegisterInfo.h  (+38 more)
device_backends/pcie/: CMakeLists.txt
device_backends/src/: AddressBasedBackend.cc  AddressBasedBufferingRegisterAccessor.cpp  AddressBasedRegisterAccessor.cc  AsyncAccessorManager.cc  AsyncDomainsContainer.cc  AsyncNDRegisterAccessor.cc  Axi4_Intc.cc  BackendFactory.cc  DeviceBackend.cc  DeviceBackendImpl.cc  DummyBackend.cc  DummyBackendBase.cc  DummyIntc.cc  DummyInterruptControllerHandler.cc  DummyInterruptTriggerAccessor.cc  FixedPointConverter.cc  GenericInterruptControllerHandler.cc  InterruptControllerHandler.cc  LNMBackendChannelAccessor.cc  LNMBackendRegisterAccessor.cc  LNMBackendVariableAccessor.cc  LogicalNameMappingBackend.cc  LogicalNameMappingBackendRangeRegisterAccessor.cc  MemoryAddressedBackend.cc  MemoryAddressedBackendRegisterAccessor.cc  NDRegisterAccessor.cc  NDRegisterAccessorDecorator.cc  NumericAddressedBackend.cc  NumericAddressedBackendMuxedRegisterAccessor.cc  NumericAddressedBackendRegisterAccessor.cc  NumericAddressedInterruptDispatcher.cc  PcieBackend.cc  PcieBackend.cpp  PcieBackendException.cc  PcieBackendException.cpp  RebotBackend.cc  RebotBackendException.cc  RebotDevice.cc  RebotDevice.cpp  RebotProtocol0.cc  (+17 more)
device_backends/xdma/: README.md
example/: CMakeLists.txt  DemoDummy.map  DemoDummyDevice.cc  IndependentControlCore.h  InstaCoSADevExample_server.cc  InstaCoSADevExample_server.conf  Makefile  TimerDummyDevice.cc  demoApp.cc  demoApp.conf  dummy.dmap  dummy.xlmap
example/config/: TimerDummy.map  demo_example.conf  exampleApp-DoocsVariableConfig.xml
example_template/: CMakeLists.txt
example_template/config/: ApplicationCore_TemplateServer-DoocsVariableConfig.xml  ApplicationCore_TemplateServer_base_config.xml  ChimeraTK-ApplicationCore-TemplateServer.conf  devices.dmap  dummydevice.map  name_mapping.xlmap
example_template/include/: Server.h  version.h.in
example_template/modules/: CMakeLists.txt
example_template/src/: Server.cc
example_template/tests/: CMakeLists.txt  testTemplateModule.cc
examples/: CMakeLists.txt  DeviceClient.cpp  Makefile  Makefile.example  MuxedAccessor.cpp  accessor.cpp  accessor1D.cpp  accessor2D.cpp  accessor2D_multiplexed.cpp  basic.cpp  dataConsistencyGroup.cpp  dmap.cpp  example.dmap  mapped.cpp  my_device.map  numeric_address.cpp  readWrite.cpp
examples/custom_backend_registration/: CMakeLists.txt  CustomBackend.cc  my_device.map  registration_example.dmap.in  useCustomBackend.cpp
examples/wait_for_new_data/: demoApp2-DoocsVariableConfig.xml  demo_example2.conf  read_temperature_doocs_zmq.cpp
exceptionbase/: CMakeLists.txt
exceptionbase/include/: ExcBase.h  NotImplementedException.h
exceptionbase/src/: ExcBase.cpp
fileparsers/: CMakeLists.txt  dev_error_map_file.dmap  flash_mtca_demo_sis8300.map  issues.txt  sis.map  test-libmap.cpp
fileparsers/dmaps_ok/: dev_map_file_1.dmap  utc_demo_1.map
fileparsers/doc/: doxygen_cfg
fileparsers/include/: DMapFile.h  DMapFileParser.h  DMapFilesParser.h  DataModifierPlugin.h  DeviceInfoMap.h  DynamicValue.h  ExcMap.h  ExceptionMap.h  LogicalNameMap.h  LogicalNameMapParser.h  MapException.h  MapFile.h  MapFileParser.h  RegisterInfo.h  RegisterInfoMap.h  RegisterInfoPlugin.h  RegisterPath.h  RegisterPlugin.h  RegisterPluginFactory.h  ScaleRegisterPlugin.h  Value.h  dmapFile.h  libmap.h  mapFileParser.h  parserUtilities.h  predicates.h
fileparsers/src/: DMapFile.cpp  DMapFileParser.cpp  DMapFilesParser.cpp  DeviceInfoMap.cc  DynamicValue.cc  ExcMap.cpp  ExceptionMap.cpp  HelperMethods.cc  HelperMethods.h  LogicalNameMap.cc  LogicalNameMapParser.cc  MapFile.cpp  (+14 more)
libdev_v2/: CMakeLists.txt  Makefile  test-libdev.cpp
plugin_example/: CMakeLists.txt
tests/: 64BitScalar.map  64BitSequence.map  CMakeLists.txt  DoubleBuffer.map  IncorrectFracBits1.map  IncorrectFracBits2.map  IncorrectRegisterWidth.map  IncorrectRegisterWidth2.map  IncorrectRegisterWidth3.map  IncorrectRegisterWidth4.map  MandatoryRegisterfIeldMissing.map  Subdevice.map  SubdeviceMuxedArea.map  SubdeviceTarget.map  badLoadlib.dmap  badLoadlib2.dmap  badMappFile.mapp  bam_fmc25_r1225.mapp  bam_fmc25_r1225_new_muxed.mapp  bitRangeReadPlugin.xlmap  configReaderDevice.map  decoratorTest.map  doubleBuffer.dmap  doubleBuffer.map  doubleBuffer.xlmap  doubleBufferHW.dmap  doubleBufferHW.map  doubleBufferHW.xlmap  dummies.dmap  dummies.dmap.orig  empty.dmap  floatRawTest.map  forceReadOnlyPlugin.xlmap  forceReadOnlyPlugin2.xlmap  goodMapFile.map  goodMapFileWithComments.map  goodMapFile_withoutModules.map  goodMappFile.mapp  historizedDataMatching.xlmap  interruptMapFile.map  (+96 more)
util/: CMakeLists.txt
(+1197 files in other folders)
